# textract

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
demo/: README.md  index.html  server.py  startdemo.sh
extracttext/: __init__.py  build.sh  cli.py  concurrency.py  dataloader.py  errors.py
extracttext/detector/: __init__.py
extracttext/extractors/: __init__.py  base_extractor.py  csv_file.py  docx.py  image_ocr.py  pdf_ocr.py  pdf_text.py  text_file.py
extracttext/server/: __init__.py  __main__.py
extracttext/test/: E2E_csv_test.py  E2E_docx_test.py  E2E_image_test.py  E2E_ocr_performance.py  E2E_pdf_ocr_test.py  E2E_pdf_text_test.py  E2E_text_test.py  runtests.sh  test_csv_extractor.py  test_detector_samples.py  test_docx_extractor.py  test_image_extractor.py  test_pdf_ocr_extractor.py  test_pdf_text_extractor.py  test_text_extractor.py
extracttext/test/testsamples/: csv.csv  docx.docx  text.txt
